--- a/praci.html
+++ b/praci.html
@@ -17,10 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Oswald:wght@500&family=Poppins&family=Roboto:ital@1&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <!-- fontawsome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- inline css start here -->
     <style>
         body{
              font-family: 'Poppins', sans-serif;
@@ -33,13 +29,7 @@
         }
 
         .card-img{
-            width: 100%;
-        }
-
-        .author-img{
-          width: 55px;
-          height: 55px;
-          border-radius: 50%;
+            width: 500px;
         }
     </style>
 
@@ -82,23 +72,34 @@
 
     <main>
 
-        <section>
-            <div id="news-heading" class="d-flex justify-content-between" >
-
-            </div>
-        </section>
-
-
-        <section>
-
-            <div id="card-id">
-
+        <div class="card rounded-3 p-4">
+            <div class="col-md-3">
+                <img src="" alt="">
             </div>
 
+            <div class="col-md-9">
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, explicabo?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis necessitatibus et, nam eligendi expedita? Nisi debitis voluptatibus laborum dolores recusandae distinctio eum assumenda, veniam, inventore, a corporis? Earum, nihil.</p>
+            </div>
 
+            <div >
+                <div class="d-flex justify-content-between" >
+                     <img src="" alt="">
+                     <div>
+                        <p>ldksjfld</p>
+                        <p>37457893479857</p>
+                     </div>
 
-        </section>
-        
+                     <p>kjdhfjh</p>
+
+                     <p>gffgjfg
+                     </p>
+
+                     <p>jhdkjsf</p>
+                </div>
+            </div>
+
+        </div>
 
 
     </main>
