--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           </div>
         </div>
 
-        
+        <section style="height:70vh ;" id="warning" class=" d-flex   justify-content-center align-items-center d-none">
+          <h3 class="text-center fw-bold">No update News for this time. Try again letter...</h3>
+        </section>
 
 
         <section>
