--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
      
 
         <section>
-            <div id="news-heading" class="d-flex justify-content-between" >
+            <div id="news-heading" class="d-flex fw-bold flex-column flex-md-row  text-center my-1 justify-content-between" >
 
             </div>
         </section>
