--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <h5 class="modal-title"  id="modal-id" id="staticBackdropLabel"></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div id="modal-body" class="modal-body">
         ...
       </div>
       <div class="modal-footer">
@@ -157,7 +157,7 @@
     <!-- js link -->
     <script src="newsFeed.js"></script>
 
-    
+
     <!-- js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
