--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item ">
-                    <a class="nav-link fw-bold active mx-2 fs-6 text-primary" aria-current="page" href="#">News</a>
+                    <a id="news-btn" class="nav-link fw-bold active mx-2 fs-6 text-primary" aria-current="page" href="#">News</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link fs-6 fw-bold mx-4" href="#">Blog</a>
+                    <a id="blog-btn" class="nav-link fs-6 fw-bold mx-4" href="#">Blog</a>
                   </li>
                  
                 </ul>
@@ -149,6 +149,7 @@
     </main>
 
     <footer>
+      <hr>
       <p class="text-center fw-bold">copyrigt 2021 with stay update</p>
     </footer>
 
