--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stay Update</title>
+    <title>Stay Update- Blog site</title>
 
     <!-- css link -->
     <link rel="stylesheet" href="style.css">
@@ -92,7 +92,7 @@
 
     <footer class="mt-5">
       <hr>
-      <p class="text-center fw-bold">copyrigt 2021 with stay update</p>
+      <p class="text-center fw-bold">@copyrigt 2021 ||  all right resurved of stay update</p>
 
     </footer>
     <!-- js link -->
