--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stay Update</title>
+    <title>Stay Update- News site</title>
 
 
     <!-- css link -->
@@ -99,7 +99,7 @@
         </section>
 
         <section>
-          <div class=" shadow fs-5 pt-3 pb-2 my-5 ps-2 rounded-3 text-muted  ">
+          <div class=" shadow-sm fs-5 pt-3 pb-2 my-5 ps-2 rounded-3 text-muted  ">
             <p> <span id="qty"></span> item found for this catagory... </p>
           </div>
         
@@ -159,7 +159,7 @@
 
     <footer>
       <hr>
-      <p class="text-center fw-bold">copyrigt 2021 with stay update</p>
+      <p class="text-center fw-bold">@copyrigt 2021 ||  all right resurved of stay update</p>
     </footer>
 
 
