comment and foreEach added

--- a/blog.html
+++ b/blog.html
@@ -17,21 +17,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Oswald:wght@500&family=Poppins&family=Roboto:ital@1&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
+
+    <!-- internal css start here -->
+
     <style>
         body{
              font-family: 'Poppins', sans-serif;
-;
-        }
 
-        .catagory-link{
-            text-decoration: none;
-            color: black;
-        }
-
-        .card-img{
-            width: 500px;
         }
     </style>
+
+  <!-- internal css start here -->
+
 
 
 </head>
@@ -64,11 +61,13 @@
 
         </div>
       </nav>
+
     <!-- navbar ends here -->
       <hr>
-
-
 </header>
+
+
+    <!-- main section start here -->
 
     <main class="container">
        <h2 class="text-center m-5 fw-bold">Let's have some study on basic javascript</h2>
@@ -85,16 +84,24 @@
         <h4 class="fw-bold"> Question: Write down about Template string</h4> <br>
         <p class="text-muted"> <span class="fw-bold">Answer:</span> <br> Template String: Template strings are a powerful feature of modern JavaScript released in ES6. It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that are complex and contain dynamic elements.Oct 20, 2019 </p>
       </div>
-     
-
 
     </main>
+
+    <!-- main section ends here -->
+
+    
+
+    <!-- footer section start here -->
 
     <footer class="mt-5">
       <hr>
       <p class="text-center fw-bold">@copyrigt 2021 ||  all right resurved of stay update</p>
 
     </footer>
+
+    <!-- footer section ends here -->
+
+
     <!-- js link -->
     <script src="newsFeed.js"></script>
     <!-- js cdn -->
