--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item ">
-                    <a id="news-btn" class="nav-link fw-bold active mx-2 fs-6 text-primary" aria-current="page" href="#">News</a>
+                    <a id="news-btn" class="nav-link fw-bold active mx-2 fs-6 text-primary" aria-current="page" href="index.html"> News </a>
                   </li>
+                  
                   <li class="nav-item">
-                    <a id="blog-btn" class="nav-link fs-6 fw-bold mx-4" href="#">Blog</a>
+                    <a id="blog-btn" class="nav-link fs-6 fw-bold mx-4" href="blog.html"> Blog </a>
                   </li>
                  
                 </ul>
